Fix spacing

--- a/src/components/resources/QuestionnaireResponse/QuestionnaireResponse.css
+++ b/src/components/resources/QuestionnaireResponse/QuestionnaireResponse.css
@@ -4,8 +4,12 @@
   margin: 0;
 }
 
+.fhir-resource__QuestionnaireResponse-list:first-of-type {
+  padding-top: 20px;
+}
+
 .fhir-resource__QuestionnaireResponse-list-title {
-  padding: 2px 2px 4px 2px;
+  padding: 2px 2px 8px 2px;
   font-weight: bold;
 }
 
